style.css
/*
Theme Name: White Allies
Text Domain: White Allies
Version: 1.0
Description: category based for story collection
Tags: responsive, fancy
Author: web developer apprentice network
Author URI: https://webdevapprentice.uk/
*/
/* CSS Variables */
:root {
  --primary: #ddd;
  --dark: #333;
  --light: #fff;
  --shadow: 0 1px 5px rgba(104, 104, 104, 0.8);
  --charcoal_grey: #494D5F;
  --dark_slate: #1d1e22;
  --Blueberry: #6B7A8F;
  --Cerulean: #00303F;
  --Honey: #DCAE1D;
  --Apricot: #F7882F;
  --silver_fox: #d4d4dc;
  --Magenta: #83085E;
  --Deep_Apricot: #ED6908;
}

* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

a {
  color: var(--Apricot);
}

html {
  box-sizing: border-box;
  font-family: 'Spartan', sans-serif;
  overflow-x: hidden;
}

body {
  background: var(--light);
  line-height: 1.4;
  overflow-x: hidden;
  position: relative;
}

h2 {
  font-family: 'Krona One', sans-serif;
}

.btn {
  background-color: var(--Apricot);
  color: var(--light);
  padding: 0.6rem 1.3rem;
  text-decoration: none;
  border: 0;
}

.btn:hover {
  background-color: var(--Cerulean);
  color: var(--light);
}

img {
  max-width: 100%;
}

.wrapper {
  display: block;
}

/* Navigation */
#mobile-nav {
  display: none;
}

nav {
  overflow: auto;
}

nav.main {
  display: block;
  background-color: var(--charcoal_grey);
  padding: 1em;
}

nav.main .menu-item {
  display: inline-block;
  min-width: 180px;
}

ul.navigation,
ul.sub-menu {
  /* display: inline-block;
  overflow: hidden;
  background-color: var(--charcoal_grey);
  padding: 0;
  margin: 0 1em 0 0; */
  list-style-type: none;
  float: right;
}

nav.main ul ul.sub-menu {
    display: none;
    position: absolute;
    z-index: 99999;
    box-shadow: 0px 3px 3px var(--shadow);
    padding:0;
    white-space:nowrap;
}

nav.main ul li:hover > ul.sub-menu {
    display: block;
}

nav.main ul ul.sub-menu li {
    width: 100%;
    display: block;
}

/* Style the front page */
section.grey-area {
    width: 95%;
    margin: 4em auto;
    padding: 2em;
    display: block;
    background: var(--silver_fox);
    box-shadow: var(--shadow);
}

/* Style the Action Allies menu */
section#action ul.menu {
    list-style-type: none;
}
section#action ul.menu li {
    margin: 0 0 1em 0;
}
/* ---------------------------- */

.custom-logo-link {
  margin-top: 0;
  margin-left: 1em;
  display: inline-block;
}
.custom-logo-link img {
  width: 100px;
  height: auto;
  filter:  brightness(0) invert(1);
}

.menu-item a {
  display: block;
  background-color: var(--charcoal_grey);
  color: var(--light);
  text-align: center;
  padding: 1em 2em;
  text-decoration: none;
  font-weight: bold;
  font-size: 1.2em;
}

.menu-item a span.excerpt {
  font-size: initial;
  font-weight: initial;
}

.menu-item a:hover {
  background-color: var(--Cerulean);
  text-decoration: none;
  color: var(--light);
}

/* Top Container */
.top-container {
  display: grid;
  grid-gap: 20px;
  grid-template-areas:
    /* 'showcase showcase top-box-a' */
    'showcase showcase top-box-b';
}

article.content {
    max-width: 85%;
    margin: 2em auto;
    padding: 2em;
}

/* .menu-action-allies-menu-container { */
    /* width: 50%; */
    /* float: right; */
    /* padding: 2em; */
/* } */

/* Showcase */
.showcase {
  grid-area: showcase;
  min-height: 400px;
  background-size: cover;
  background-position: center;
  /* padding: 2rem; */
  /* margin-top: 2rem; */
  /* flexbox */
  display: flex;
  flex-direction: column;
  align-items: start;
  justify-content: center;
  box-shadow: var(--shadow);
}

.container h1 {
  font-size: 4rem;
  margin-bottom: 0;
  color: var(--light);
  font-family: 'Krona One', Helvetica, Sans-serif;
  font-weight: bold;
  padding-top: 30px;
}

.container p {
  font-size: 1.3rem;
  margin-top: 0;
  color: var(--light);
  font-family: Arial, Helvetica, Sans-serif;
}

#mission h2, #info h2 {
  text-align: center;
  padding: .5rem;
}

#mission p, #info p {
  text-align: center;
}

/* Top Box */
.top-box {
  background: var(--silver_fox);
  display: grid;
  align-items: center;
  justify-items: center;
  box-shadow: var(--shadow);
  padding: 1.5rem;
}

/* .top-box-a {
  grid-area: top-box-a;
} */
.top-box-b {
  grid-area: top-box-b;
  background-color: var(--charcoal_grey);
  color: var(--silver_fox);
  text-align: center;
  width: 350px;
  margin-top: 2rem;
  margin-right: 0;
  margin-left: 0;
  margin-bottom: 0;
}

/* wp contact form 7 FRONT page styling */
.wpcf7 {
  padding: 25px;
  text-align: center;
}

.wpcf7 textarea,
.wpcf7 input,
.wpcf7 label,
.wpcf7 select {
  width: 100%;
  }

.wpcf7 .half-width {
    width: calc(50% - 2em);
    margin-left: 0;
    margin-right: 2em;
    float: left;
}
.wpcf7 .half-width ~ .half-width {
  margin-left: 2em;
  margin-right: 0;
}

main.wrap {
  max-width: 85%;
  margin: 0 auto 2em;
  padding: 0 3em 2em;
}

/* Boxes responsive allow for adding more box topics when needed */
.boxes {
  /* padding: 3em; */
  /* display: grid; */
  /* grid-gap: 2em; */
  /* margin-left: 20em; */
  /* margin-right: 20em; */
  /* grid-template-columns: repeat(auto-fit, minmax(250px, 3fr)); */
  /* grid-auto-rows: 300px; */
  width: 85%;
  margin: 2em auto;
  text-align: center;
}

.box {
  background-color: var(--charcoal_grey);
  color: var(--light);
  text-align: center;
  padding: 1.5rem 2rem;
  box-shadow: var(--shadow);
  display: inline-table;
  width: 300px;
  height: 300px;
  margin: 2em;
}

a:hover .box {
  background-color: var(--Cerulean);
}

.box h2 {
  color: var(--Apricot);
  font-size: 1.5rem;
}

/* Info */
.lets_talk {
  background: var(--silver_fox);
  box-shadow: var(--shadow);
  display: grid;
  grid-gap: 30px;
  grid-template-columns: repeat(2, 1fr);
  padding: 3rem;
}

#twitter_feed p {
  text-align: center;
  box-shadow: var(--shadow);
  padding: 9rem;
}

/* Action */
div.action {
  width: 45%;
  margin: 0 2.5%;
  padding: 1em;
  display: inline-block;
  vertical-align: top;
}
section#mission div.action,
section#story-form div.action {
  width: 100%;
}

section.grey-area h2,
section.boxes h2 {
  text-align: center;
  font-size: 1.9rem;
  text-transform: uppercase;
}

.box h3 {
  color: var(--Apricot);
  font-family: 'Krona One', sans-serif;
  font-size: 1.6em;
}

.action p {
  padding: 0;
  text-align: center;
}

a.action-btn {
  display: block;
  text-align: center;
  margin: auto;
  font-size: 1.5rem;
  background-color: var(--Cerulean);
  color: var(--light);
  padding: 0.6rem 1.3rem;
  text-decoration: none;
  border: 0;
}

/* Footer */
footer {
  margin-top: 2rem;
  background-color: var(--charcoal_grey);
  color: var(--light);
  text-align: center;
  padding: 1rem;
}

/* slider */
.carousel {
    width: 100%;
    position: relative;
    margin: 0 auto;
}

.carousel-indicators {
  margin-bottom: 0;
}

.carousel-item {
  height: 40rem;
  position: relative;
}

.carousel-inner>.carousel-item>img {
  min-width: 100%;
  height: auto;
}

.carousel-item img {
  width: 100%;
}

.carousel-control-next,
.carousel-control-prev {
  height: fit-content;
  top: 50%;
  width: auto;
}

.carousel .container {
  /* text at bottom */
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  padding-left: 3em;
  padding-right: 3em;
  padding-bottom: 2em;
}

.overlay-image-1 {
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  top: 0;
  background-position: centre;
  background-size: cover;
  background-color: rgba(0, 0, 0, 0.3);
}

.overlay-image-2 {
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  top: 0;
  background-position: centre;
  background-size: cover;
  background-color: rgba(0, 0, 0, 0.3);
}

.overlay-image-3 {
  position: absolute;
  bottom: 0;
  left: 0;
  right: 0;
  top: 0;
  background-position: centre;
  background-size: cover;
  background-color: rgba(0, 0, 0, 0.3);
}

/*Contact form 7 plugin page styling */
#wpcf7-f143-p29-o1 {
  background-color: var(--silver_fox);
  color: var(--charcoal_grey);
  font-family: Arial, Helvetica, Sans-serif;
  border: 3px solid var(--charcoal_grey);
  box-shadow: var(--shadow);
  padding: 25px;
}

/* #wpcf7-f143-p29-o1 textarea {
  width: 100%;
} */

/* Media Queries */
/* Effective for 767px or less - i pads */
@media(max-width: 767px) {

  #main-nav {
    display: none;
  }
  #mobile-nav {
    display: block;
  }

  .custom-logo-link {
    text-align: center;
    margin: 0 auto;
    width: 100%;
  }

  /*  2 top boxes to slide under the showcase img on a large mobile */
  .top-container {
    grid-template-areas: 'showcase showcase'
      'top-box-a top-box-b'
  }

  .top-box-b {
    width: 100%;
  }

  .carousel-inner img {
    width: 100%;
    height: 100%;
  }

  .container h1 {
    font-size: 2.5rem;
  }

  .logo img {
    display: block;
    margin-left: auto;
    margin-right: auto;
    position: relative;
    transform: none;
  }

  .navigation {
    /* makes the nav stack up as a column on a mobile */
    grid-template-columns: 1fr;
    margin: 0;
  }

  .nav-item a {
    padding: 10px 20px;
  }

  .action {
    /* makes the nav stack up as a column on a mobile */
    grid-template-columns: 1fr;
  }

  .btn {
    display: block;
    text-align: center;
    margin: auto;
  }

  .boxes {
    width: 100%;
  }

  .box {
    word-break: break-word;
    width: 100%;
    max-width: 300px;
    padding: 1em;
    margin: 1em 0;
  }

  .lets_talk {
    /* makes the section stack up as a column on a mobile */
    grid-template-columns: 1fr;
  }

  section.grey-area {
    width: 100%;
    padding: 1em;
    margin: 1em 0;
    text-align: center;
  }

  div.action {
    width: 100%;
  }

  ul#menu-action-allies-menu .menu-item a {
    text-align: center;
  }

  .wpcf7 .half-width {
    width: 100%;
    margin: 0 !important;
  }

  .carousel-inner>.carousel-item>img {
    height: 100%;
    object-fit: cover;
  }

  ul.navigation {
    float: none;
  }

  .menu-item a {
    text-align: left;
  }

  nav.main .menu-item {
    display: block;
    margin: 0 auto;
  }

  li.menu-item-has-children > a:after {
    content: '\25BC';
    float: right;
  }

  main.wrap {
    max-width:95%;
    padding: 1em;
  }

}

@media(max-width: 500px) {
  .carousel-item>img {
    width: 200px;
    height: 400px;
    object-fit: cover;
  }

  /*  2 top boxes to slide under the showcase img on a SMALL mobile */
  .top-container {
    grid-template-areas: 'showcase'
      'top-box-a'
      'top-box-b'
  }

  ion-icon {
    font-size: 32px;
  }

  .box {
    word-break: break-word;
  }

  .box h2 {
    font-size: 1rem;
  }

  #info {
    text-align: center;
  }

  #twitter_feed {
    text-align: center;
  }

  #twitter_feed p {
    padding-right: 2.5rem;
  }

  .twitter_icon, .fb_icon, .insta_icon {
    margin: 8px;
  }
}

/* #ttr_header {
  text-align: center;
  padding: 2em;
  background-color: #91A3B0;
}
body {
  text-align: left;
}
#ttr_sidebar {
  border-left: 1px solid black;
}
footer {
  width: 100%;
  border-top: 1px #a2a2a2 solid;
  text-align: center;
}
.title {
  font-size: 11pt;
  font-family: verdana;
  font-weight: bold;
} */

